--- a/express/package.json
+++ b/express/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "express",
-  "version": "1.0.0",
+  "name": "server",
+  "version": "1.0.7",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon user.js"
+    "dev": "nodemon app2.js"
   },
-  "author": "",
+  "author": "ds",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.0",
-    "morgan": "^1.10.0"
+    "mongoose": "^8.2.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
